# sound-outputs-switcher

./: Cargo.toml  README.md
src/: commands.rs  device.rs  lib.rs  main.rs
src/ui/: gui_ui.rs  mod.rs  simple_ui.rs  tui_ui.rs
