[package]
name = "sound-outputs-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
crossterm = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tui = "0.19.0"
